--- a/src/framework/_layers.scss
+++ b/src/framework/_layers.scss
@@ -15,6 +15,10 @@ $layers: (
   'limbo': -999,
 ) !default;
 
+/*============================================================================*\
+   Functions
+\*============================================================================*/
+
 /**
  * A function helper to avoid having to type `map-get($layers, ...)`
  * Based on http://css-tricks.com/handling-z-index/
@@ -50,39 +54,52 @@ $layers: (
 }
 
 /*============================================================================*\
+   Mixins
+\*============================================================================*/
+
+/**
+ * Abstract loop over all layers with the possibility to exclude some
+ *
+ * @param  {ArgList} $excludes The colors to exclude from the loop
+ *
+ * @author Titouan Mathis <titouan@studiometa.fr>
+ * @since  1.2.0
+ */
+@mixin for-each-layers($excludes...) {
+  @each $layer in $layers {
+    $layer: nth($layer, 1);
+    $value: l($layer);
+
+    @if not index($excludes, $layer) {
+      @content ($layer, $value);
+    }
+  }
+}
+
+/*============================================================================*\
    Layers class helpers
 \*============================================================================*/
 
 @if $has-classes {
-  @each $layer in $layers {
-    $name: nth($layer, 1);
-    $value: l($name);
-
-    .layer-#{$name} {
+  @include for-each-layers using ($layer, $value) {
+    .layer-#{$layer} {
       z-index: $value;
     }
 
-    .layer-#{$name}--force {
+    .layer-#{$layer}--force {
       z-index: $value !important;
     }
   }
 
   // Media queries
-  @each $breakpoint in $breakpoints {
-    $breakpoint: nth($breakpoint, 1);
+  @include for-each-breakpoints using ($breakpoint) {
+    @include for-each-layers using ($layer, $value) {
+      .layer-#{$layer}--#{$breakpoint} {
+        z-index: $value;
+      }
 
-    @media all and #{md($breakpoint)} {
-      @each $layer in $layers {
-        $name: nth($layer, 1);
-        $value: l($name);
-
-        .layer-#{$name}--#{$breakpoint} {
-          z-index: $value;
-        }
-
-        .layer-#{$name}--force-#{$breakpoint} {
-          z-index: $value !important;
-        }
+      .layer-#{$layer}--force-#{$breakpoint} {
+        z-index: $value !important;
       }
     }
   }
