--- a/src/framework/_typography.scss
+++ b/src/framework/_typography.scss
@@ -49,11 +49,13 @@ $has-classes: false !default;
 }
 
 @if $has-classes {
-  html,
-  input,
-  button,
   .type-antialiased {
-    @include type-antialiased;
+
+    &,
+    input,
+    button {
+      @include type-antialiased;
+    }
   }
 }
 
@@ -61,133 +63,55 @@ $has-classes: false !default;
  * A map to define all type-sizes and their corresponding line-heights, the
  * first value is the font-size, the seconde the line-height.
  *
- * The `fz($type-size, $unit)` and the `lh($type-size)` functions below can be
- * used to get easily one of the two values.
- *
  * @type {Map}
  */
 $type-sizes: (
-  'display-3': (
-    44px,
-    66px,
+  display-1: (
+    size: 32px,
+    line-height: 48px,
+    weight: 700,
   ),
-  'display-2': (
-    36px,
-    54px,
+  display-2: (
+    size: 24px,
+    line-height: 36px,
+    weight: 700,
   ),
-  'display-1': (
-    24px,
-    32px,
+  body: (
+    size: 16px,
   ),
-  'display-0': (
-    18px,
-    27px,
-  ),
-  'title-small': (
-    20px,
-    26px,
-  ),
-  'title-smaller': (
-    18px,
-    24px,
-  ),
-  'body': (
-    16px,
-    30px,
-  ),
-  'medium': (
-    14px,
-    26px,
-  ),
-  'small': (
-    12px,
-    22px,
-  ),
-  'smaller': (
-    10px,
-    18px,
+  small: (
+    size: 12px,
   ),
 ) !default;
 
-/*============================================================================*\
-   Type sizes helper functions and mixins
-\*============================================================================*/
-
-/**
- * A function helper to avoid having to type `map-get($layers, ...)`
- * Based on http://css-tricks.com/handling-z-index/
- *
- * @param  {string} $layer The name of the z-index
- * @param  {number} $var   The modifier if needed
- * @return {number}        The corresponding z-index based on the $layers var
- */
-@function font-size($type-size, $unit: 'em') {
-  @if not map-has-key($type-sizes, $type-size) {
-    @error 'No font-size found in $fonti-sizes map for `#{$type-size}`.';
-  }
-
-  $root-font-size: 16px;
-  $values: map-get($type-sizes, $type-size);
-
-  // First value is the font-size
-  $type-size: nth($values, 1);
-
-  // Second value is the line-height, we divide it by the font-size to get
-  // a line-height without unit, which is a best practice.
-  $line-height: nth($values, 2) / $type-size;
-
-  @if $unit == 'px' {
-    @return $type-size;
-  } @else {
-    @return #{$type-size / $root-font-size + $unit};
-  }
-}
-
-/**
- * Alias for the `font-size($type-size, $unit)` function above
- */
-@function fz($type-size, $unit: 'em') {
-  @return font-size($type-size, $unit);
-}
-
-/**
- * A function helper to get the computed line-height of the given font-size
- * @param  {string} $type-size The name of the font-size
- * @return {string}            The corresponding line-height
- */
-@function line-height($type-size) {
-  @if not map-has-key($type-sizes, $type-size) {
-    @error 'No font-size found in $type-sizes map for `#{$type-size}`.';
-  }
-
-  $values: map-get($type-sizes, $type-size);
-
-  // First value is the font-size
-  $type-size: nth($values, 1);
-
-  // Second value is the line-height, we divide it by the font-size to get
-  // a line-height without unit, which is a best practice.
-  $line-height: nth($values, 2) / $type-size;
-
-  @return $line-height;
-}
-
-/**
- * Alias for the `line-height($type-size)` function above
- */
-@function lh($type-size) {
-  @return line-height($type-size);
-}
-
 /**
  * A mixin to get both font-size and line-height given a named font-size
+ *
  * @param  {string} $type-size The font-size name
  * @param  {string} $unit      The unit for the font-size value
  * @return {string}            The `font-size` and `line-height` declarations
  */
 @mixin font-size($type-size, $unit: 'em') {
-  font-size: fz($type-size, $unit);
-  line-height: lh($type-size);
+  @if not map-has-key($type-sizes, $type-size) {
+    @error 'No font-size found in $type-sizes map for `#{$type-size}`.';
+  }
+
+  $type-size: map-get($type-sizes, $type-size);
+  $font-size: map-get($type-size, 'size');
+
+  @if $unit == 'px' {
+    font-size: $font-size;
+  } @else {
+    font-size: #{$font-size / 16px + $unit};
+  }
+
+  @if map-has-key($type-size, 'weight') {
+    font-weight: map-get($type-size, 'weight');
+  }
+
+  @if map-has-key($type-size, 'line-height') {
+    line-height: map-get($type-size, 'line-height') / $font-size;
+  }
 }
 
 /**
@@ -247,21 +171,6 @@ $type-fonts: (
         weight: 400,
         style: normal,
       ),
-      (
-        filename: 'georgia-italic',
-        weight: 400,
-        style: italic,
-      ),
-      (
-        filename: 'georgia-bold',
-        weight: 700,
-        style: normal,
-      ),
-      (
-        filename: 'georgia-bold-italic',
-        weight: 700,
-        style: italic,
-      ),
     ),
   ),
   sans-serif: (
@@ -273,21 +182,6 @@ $type-fonts: (
         weight: 400,
         style: normal,
       ),
-      (
-        filename: 'arial-italic',
-        weight: 400,
-        style: italic,
-      ),
-      (
-        filename: 'arial-bold',
-        weight: 700,
-        style: normal,
-      ),
-      (
-        filename: 'arial-bold-italic',
-        weight: 700,
-        style: italic,
-      ),
     ),
   ),
 ) !default;
@@ -296,26 +190,28 @@ $type-fonts: (
   @each $font in $type-fonts {
     $key: nth($font, 1);
     $font: map-get($type-fonts, $key);
-    $name: map-get($font, 'name');
     $stack: map-get($font, 'stack');
-    $webfonts: map-get($font, 'webfonts');
 
     .type-#{$key} {
       font-family: unquote($stack);
     }
 
-    @each $webfont in $webfonts {
-      $file: map-get($webfont, 'filename');
-      $weight: map-get($webfont, 'weight');
-      $style: map-get($webfont, 'style');
+    @if map-has-key($font, 'webfonts') and map-has-key($font, 'name') {
+      $name: map-get($font, 'name');
+      $webfonts: map-get($font, 'webfonts');
+      @each $webfont in $webfonts {
+        $file: map-get($webfont, 'filename');
+        $weight: map-get($webfont, 'weight');
+        $style: map-get($webfont, 'style');
 
-      @font-face {
-        font-family: $name;
-        src: url('#{$type-webfont-dir + $file}.woff2') format('woff2'),
-          url('#{$type-webfont-dir + $file}.woff') format('woff');
-        font-weight: $weight;
-        font-style: $style;
-        font-display: $type-webfont-display;
+        @font-face {
+          font-family: $name;
+          src: url('#{$type-webfont-dir + $file}.woff2') format('woff2'),
+            url('#{$type-webfont-dir + $file}.woff') format('woff');
+          font-weight: $weight;
+          font-style: $style;
+          font-display: $type-webfont-display;
+        }
       }
     }
   }
